--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
   },
   "homepage": "https://github.com/george-shammar/to-do-list#readme",
   "devDependencies": {
+    "babel-eslint": "10.1.x",
     "css-loader": "^5.2.4",
+    "eslint": "6.8.x",
+    "eslint-config-airbnb-base": "14.1.x",
+    "eslint-plugin-import": "2.20.x",
     "style-loader": "^2.0.0",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "3.17.x",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0"
   }
