--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A To-do list for task and time management created with Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "webpack --mode development",
     "watch": "webpack --watch",
     "build": "webpack --mode production",
@@ -26,13 +26,14 @@
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
+    "jest": "^27.0.4",
     "style-loader": "^2.0.0",
-    "stylelint": "13.3.x",
-    "stylelint-config-standard": "20.0.x",
+    "stylelint": "^9.3.0",
+    "stylelint-config-standard": "^18.3.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "3.17.x",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.7.2"
   }
 }
